--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<artifactId>microservice-kubernetes-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	
 
 	<modules>
 		<module>microservice-kubernetes-demo-customer</module>
@@ -25,7 +26,16 @@
 	</properties>
 
 	<build>
+		
 		<plugins>
+			<plugin>
+   <groupId>org.apache.maven.plugins</groupId>
+   <artifactId>maven-compiler-plugin</artifactId>
+   <configuration>
+      <source>1.8</source>
+      <target>1.8</target>
+   </configuration>
+</plugin> 
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
