--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 	</modules>
 
 	<properties>
-		<java.version>10</java.version>
+		<java.version>1.8.0_252</java.version>
 	</properties>
 
 	<build>
