--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,15 @@
 	</modules>
 
 	<properties>
-		<java.version>1.8.0_252</java.version>
-	</properties>
+		<properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <libraries.directory>libraries</libraries.directory>
+</properties> 
+		
+		
+	
 
 	<build>
 		
